--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,102 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Dependencies
-node_modules
+node_modules/
 .pnp
 .pnp.js
+.pnpm-store/
 
 # Local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
+!.env.template
 
 # Testing
-coverage
+coverage/
+.nyc_output/
 
 # Turbo
-.turbo
+.turbo/
 
 # Vercel
-.vercel
+.vercel/
 
 # Build Outputs
 .next/
 out/
-build
-dist
+build/
+dist/
 
+# TypeScript cache
+*.tsbuildinfo
+.eslintcache
+tsconfig.tsbuildinfo
 
-# Debug
+# Logs
+logs/
+*.log
 npm-debug.log*
+pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+
+# IDEs and editors
+.idea/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # Misc
 .DS_Store
 *.pem
+Thumbs.db
+.history
+.temp/
+.tmp/
+.cache/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Generated assets
+**/public/workbox-*.js
+**/public/sw.js
+**/public/service-worker.js
+
+# Generated API files (optional if using OpenAPI/Swagger)
+**/api/generated/
+
+# pnpm specific
+.pnpm-debug.log
+
+# Next.js specific (if using Next.js)
+.next-*
+.env*.local
+next-env.d.ts
+
+# Nest.js specific
+/dist
+/node_modules
+
+# Bundle analyzer
+stats.html
+bundle-stats.json
+
+# Web vitals
+web-vitals.json
